--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: OpenAiClient Test
+name: "build"
 on:
   push:
     paths-ignore:
@@ -8,11 +8,9 @@ on:
       - '**/*.md'
 
 jobs:
-  check:
-    environment: OPENAI
+  release:
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -25,11 +23,8 @@ jobs:
       - name: chmod -R 777 *
         run: chmod -R 777 *
 
-      - name: Init gradle project
-        run: ./gradlew clean --scan
-
-      - name: Assemble
-        run: ./gradlew assemble --scan
+      - name: BuildPlugin
+        run: ./gradlew buildPlugin
 
       - name: Upload
         uses: actions/upload-artifact@v3
